New package: DictTools v0.1.0
UUID: 6033591e-aae9-4c88-8f5f-a341f9ca5325
Repo: git@github.com:jlapeyre/DictTools.jl.git
Tree: 3d34d30bbbe577b7405984a024c37b2d487ad0a7

--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "git@github.com:jlapeyre/LapeyreRegistry.git"
 description = "Registry for some packages not in the General Registry"
 
 [packages]
+6033591e-aae9-4c88-8f5f-a341f9ca5325 = { name = "DictTools", path = "D/DictTools" }
