--- a/D/DictTools/Versions.toml
+++ b/D/DictTools/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "3d34d30bbbe577b7405984a024c37b2d487ad0a7"
 
 ["0.1.1"]
 git-tree-sha1 = "4fe2a5c017b0a865c368b6b4f576c4d3a88b8079"
+
+["0.2.0"]
+git-tree-sha1 = "988d5ebb807822fb6b3549ea9feaf8854841d357"
