New version: MEnums v0.1.1
UUID: 7c338ca5-b20e-417b-9799-aae6c720705e
Repo:
Tree: f59bbc745b11172261948eb01fbc18f2f91fac06

--- a/M/MEnums/Versions.toml
+++ b/M/MEnums/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "43722c4a56ae72a9bdb38cac3a53eaea11ca17c3"
+
+["0.1.1"]
+git-tree-sha1 = "f59bbc745b11172261948eb01fbc18f2f91fac06"
