--- a/M/MEnums/Versions.toml
+++ b/M/MEnums/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "43722c4a56ae72a9bdb38cac3a53eaea11ca17c3"
 
 ["0.1.1"]
 git-tree-sha1 = "f59bbc745b11172261948eb01fbc18f2f91fac06"
+
+["0.2.0"]
+git-tree-sha1 = "9212ea7b08796360846e46ca93b9ec1e2b88818d"
