--- a/G/GraphsExt/Versions.toml
+++ b/G/GraphsExt/Versions.toml
@@ -1,2 +1,5 @@
 ["1.0.0"]
 git-tree-sha1 = "58d407a127c971de76a79dcfd8df0e37f47d49b9"
+
+["1.0.1"]
+git-tree-sha1 = "2c78e50ffa229163d177a924e0ba236131923ea2"
