New version: GraphsExt v1.1.0
UUID: 69a6172a-6e93-4cbc-8d73-93c06968df79
Repo:
Tree: 284bc107ddb8ff80832b5c9733c45be1f4160b1f

--- a/G/GraphsExt/Versions.toml
+++ b/G/GraphsExt/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "58d407a127c971de76a79dcfd8df0e37f47d49b9"
 
 ["1.0.1"]
 git-tree-sha1 = "2c78e50ffa229163d177a924e0ba236131923ea2"
+
+["1.1.0"]
+git-tree-sha1 = "284bc107ddb8ff80832b5c9733c45be1f4160b1f"
