--- a/Registry.toml
+++ b/Registry.toml
@@ -1,6 +1,6 @@
 name = "LapeyreRegistry"
 uuid = "907be819-33fb-43a5-ba93-44eb55921698"
-repo = "http://github.com/jlapeyre/LapeyreRegistry.jl"
+repo = "http://github.com/jlapeyre/LapeyreRegistry"
 description = "Registry for some packages not in the General Registry"
 
 [packages]
