--- a/G/GraphsExt/Package.toml
+++ b/G/GraphsExt/Package.toml
@@ -1,3 +1,3 @@
 name = "GraphsExt"
 uuid = "69a6172a-6e93-4cbc-8d73-93c06968df79"
-repo = "git@github.com:jlapeyre/GraphsExt.jl.git"
+repo = "https://github.com/jlapeyre/GraphsExt.jl"
