--- a/C/ControlFlow/Package.toml
+++ b/C/ControlFlow/Package.toml
@@ -1,3 +1,3 @@
 name = "ControlFlow"
 uuid = "da1032b5-7410-4fe7-baa6-5cca8121c0cc"
-repo = "git@github.com:jlapeyre/ControlFlow.jl.git"
+repo = "https://github.com/jlapeyre/ControlFlow.jl"
