--- a/Q/QMatrices/Package.toml
+++ b/Q/QMatrices/Package.toml
@@ -1,3 +1,3 @@
 name = "QMatrices"
 uuid = "e8637a5f-fa46-429a-85d3-62b6b7f83b1f"
-repo = "git@github.com:jlapeyre/QMatrices.jl.git"
+repo = "https://github.com/jlapeyre/QMatrices.jl"
