--- a/Q/Qurt/Package.toml
+++ b/Q/Qurt/Package.toml
@@ -1,3 +1,3 @@
 name = "Qurt"
 uuid = "c5e1564c-46d0-4d88-984f-9aacba45ce63"
-repo = "git@github.com:jlapeyre/Qurt.jl.git"
+repo = "https://github.com/jlapeyre/Qurt.jl"
