--- a/Q/Qurt/Compat.toml
+++ b/Q/Qurt/Compat.toml
@@ -4,8 +4,14 @@ DictTools = "0.2.3-0.2"
 Dictionaries = "0.3"
 Graphs = "1.8.0-1"
 GraphsExt = "1.1.0-1"
-MEnums = "0.6.2-0.6"
-SnoopPrecompile = "1"
 StructArrays = "0.6"
 SymbolicUtils = "1"
 julia = "1.8.0-1"
+
+["0.0"]
+MEnums = "0.6.2-0.6"
+SnoopPrecompile = "1"
+
+["0.1-0"]
+BlockEnums = "1"
+PrecompileTools = "1"
