New package: QIBase v0.2.0
UUID: f4485a06-ee1a-4e97-a8d5-fc032a1b0f3c
Repo: git@github.com:jlapeyre/QIBase.jl.git
Tree: 7550e420b6e39300969dc3fd81c72f3f9701671a

--- a/Registry.toml
+++ b/Registry.toml
@@ -17,3 +17,4 @@ d1730f61-8521-49b5-9a1a-56a32d208dc4 = { name = "BitsX", path = "B/BitsX" }
 da1032b5-7410-4fe7-baa6-5cca8121c0cc = { name = "ControlFlow", path = "C/ControlFlow" }
 dc918f9c-79cc-42e6-85f1-d8b9b09632f4 = { name = "StreamToString", path = "S/StreamToString" }
 e8637a5f-fa46-429a-85d3-62b6b7f83b1f = { name = "QMatrices", path = "Q/QMatrices" }
+f4485a06-ee1a-4e97-a8d5-fc032a1b0f3c = { name = "QIBase", path = "Q/QIBase" }
