--- a/Q/QMatrices/Deps.toml
+++ b/Q/QMatrices/Deps.toml
@@ -1,5 +1,11 @@
 [0]
 ILog2 = "2cd5bd5f-40a1-5050-9e10-fc8cdb6109f5"
-IsApprox = "28f27b66-4bd8-47e7-9110-e2746eb8bed7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+["0 - 0.1"]
+IsApprox = "28f27b66-4bd8-47e7-9110-e2746eb8bed7"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
+["0.4 - 0"]
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
