--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.2"]
 git-tree-sha1 = "7bc9813b303712cbe97477836b2c979da666af8f"
+
+["0.4.0"]
+git-tree-sha1 = "c174c41eb8e6e92c86d7465bfa5e2aa29862b296"
