--- a/B/BitsX/Compat.toml
+++ b/B/BitsX/Compat.toml
@@ -1,8 +1,13 @@
-[0]
+["0 - 0.2"]
 julia = "1.6.0-1"
 
-["0.1.1-0"]
+["0.1.1 - 0.1"]
+Bits = "0.2"
+
+["0.1.1 - 0.2"]
 BitIntegers = "0.2"
 
-["0.1.1-0.1"]
-Bits = "0.2"
+["0.4 - 0"]
+BitIntegers = "0.3.2 - 0.3"
+Random = "*"
+julia = "1.6.0 - 1"
