--- a/B/BitsX/Deps.toml
+++ b/B/BitsX/Deps.toml
@@ -1,5 +1,8 @@
-["0-0.1"]
+["0 - 0.1"]
 Bits = "1654ce90-6ed3-553a-957f-9452c3a40996"
 
-["0.1.1-0"]
+["0.1.1 - 0"]
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
+
+["0.4 - 0"]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
