--- a/B/BitsX/Compat.toml
+++ b/B/BitsX/Compat.toml
@@ -7,7 +7,12 @@ Bits = "0.2"
 ["0.1.1 - 0.2"]
 BitIntegers = "0.2"
 
-["0.4 - 0"]
+["0.4"]
 BitIntegers = "0.3.2 - 0.3"
+
+["0.4 - 0"]
 Random = "*"
 julia = "1.6.0 - 1"
+
+["0.5 - 0"]
+BitIntegers = "0.3.0 - *"
