--- a/P/Phase4s/Versions.toml
+++ b/P/Phase4s/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "d38003bd7e04efc5103e91a291881a163bb520f7"
+
+["0.2.0"]
+git-tree-sha1 = "476f48842b3378d51c78518e3bcee851b9087f21"
