--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "7bc9813b303712cbe97477836b2c979da666af8f"
 
 ["0.4.0"]
 git-tree-sha1 = "c174c41eb8e6e92c86d7465bfa5e2aa29862b296"
+
+["0.5.0"]
+git-tree-sha1 = "6c4a95e54c233624cabaa83c6f9d68a923fe7e41"
