--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "6c4a95e54c233624cabaa83c6f9d68a923fe7e41"
 
 ["0.6.0"]
 git-tree-sha1 = "df8c9cb20c63b266a11f8e9a96cfc58c36996487"
+
+["0.7.0"]
+git-tree-sha1 = "5c7999eff05ca82661bf83ef56abd9c0a6795729"
