--- a/Q/QIBase/Deps.toml
+++ b/Q/QIBase/Deps.toml
@@ -4,4 +4,10 @@ ILog2 = "2cd5bd5f-40a1-5050-9e10-fc8cdb6109f5"
 IsApprox = "28f27b66-4bd8-47e7-9110-e2746eb8bed7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 QMatrices = "e8637a5f-fa46-429a-85d3-62b6b7f83b1f"
+
+["0 - 0.2"]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+["0.5 - 0"]
+IdentityMatrix = "8edef7da-e1b3-479c-b6e4-7e7cac36144b"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
