--- a/Q/QIBase/Versions.toml
+++ b/Q/QIBase/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "7550e420b6e39300969dc3fd81c72f3f9701671a"
+
+["0.5.0"]
+git-tree-sha1 = "312b45607ec680732c7b2bc0d74761e0dc0b2dba"
