--- a/Q/QIBase/Versions.toml
+++ b/Q/QIBase/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "7550e420b6e39300969dc3fd81c72f3f9701671a"
 
 ["0.5.0"]
 git-tree-sha1 = "312b45607ec680732c7b2bc0d74761e0dc0b2dba"
+
+["0.6.0"]
+git-tree-sha1 = "bcc489600ef087e8dc9586c1230e78f54fa69ba9"
