New version: StackEnvs v0.2.0
UUID: 6dbe6948-1a74-428b-a0c7-b6033448b207
Repo:
Tree: 7555899c11238b12adc7d317b8ea9592bfdde97f

--- a/S/StackEnvs/Versions.toml
+++ b/S/StackEnvs/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "5d44c3db562e0c667ad8fb0b9756a71fccd69f4b"
+
+["0.2.0"]
+git-tree-sha1 = "7555899c11238b12adc7d317b8ea9592bfdde97f"
