--- a/S/StackEnvs/Deps.toml
+++ b/S/StackEnvs/Deps.toml
@@ -1,3 +1,6 @@
 [0]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+
+["0.5 - 0"]
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
