New version: StackEnvs v0.7.0
UUID: 6dbe6948-1a74-428b-a0c7-b6033448b207
Repo:
Tree: b04249e37e1d88b5958a6a95ba4b8edb7ac857fa

--- a/S/StackEnvs/Versions.toml
+++ b/S/StackEnvs/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "3f1e31d6ae58060036c0a511ca467453cdff0839"
 
 ["0.6.0"]
 git-tree-sha1 = "3fb63deb5cadd2875bb42e5a122fb456ec3467d9"
+
+["0.7.0"]
+git-tree-sha1 = "b04249e37e1d88b5958a6a95ba4b8edb7ac857fa"
