--- a/S/StackEnvs/Compat.toml
+++ b/S/StackEnvs/Compat.toml
@@ -3,5 +3,8 @@ Pkg = "*"
 TOML = "1.0.3 - 1"
 julia = "1.8.0 - 1"
 
-["0.5 - 0"]
+["0.5 - 0.6"]
 PrecompileTools = "1.3.2 - 1"
+
+["0.7 - 0"]
+PrecompileTools = "1.2.1 - 1"
