--- a/S/StackEnvs/Versions.toml
+++ b/S/StackEnvs/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "3fb63deb5cadd2875bb42e5a122fb456ec3467d9"
 
 ["0.7.0"]
 git-tree-sha1 = "b04249e37e1d88b5958a6a95ba4b8edb7ac857fa"
+
+["0.8.0"]
+git-tree-sha1 = "d2037f5e4f4596c657a0883070534f11626d1c8e"
