--- a/Q/QMatrices/Compat.toml
+++ b/Q/QMatrices/Compat.toml
@@ -1,9 +1,15 @@
 ["0 - 0.1"]
 julia = "1"
 
+["0.10 - 0"]
+ILog2 = "2"
+Revise = "3.7.3 - 3"
+
 ["0.4 - 0"]
-ILog2 = "0.2.1 - 0.2"
 LinearAlgebra = "*"
 PrecompileTools = "1"
 Random = "*"
 julia = "1.6.0 - 1"
+
+["0.4 - 0.9"]
+ILog2 = "0.2.1 - 0.2"
