New version: QMatrices v0.11.0
UUID: e8637a5f-fa46-429a-85d3-62b6b7f83b1f
Repo:
Tree: df2a701525d494dd16fe07eeeef161cbbcaa776b

--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "501ead60db9fcc7628dfd0d1c63d97753bbba138"
 
 ["0.10.0"]
 git-tree-sha1 = "15393aa0d0b8a0cfe116032415dafe95ed756445"
+
+["0.11.0"]
+git-tree-sha1 = "df2a701525d494dd16fe07eeeef161cbbcaa776b"
