New version: QMatrices v0.12.0
UUID: e8637a5f-fa46-429a-85d3-62b6b7f83b1f
Repo:
Tree: 54a3ff378682d92afb5406776c2f62da8d4e228e

--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "15393aa0d0b8a0cfe116032415dafe95ed756445"
 
 ["0.11.0"]
 git-tree-sha1 = "df2a701525d494dd16fe07eeeef161cbbcaa776b"
+
+["0.12.0"]
+git-tree-sha1 = "54a3ff378682d92afb5406776c2f62da8d4e228e"
