New version: QMatrices v0.13.0
UUID: e8637a5f-fa46-429a-85d3-62b6b7f83b1f
Repo:
Tree: 49fadb15648a3df114886ea252b9670ea14d8369

--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "df2a701525d494dd16fe07eeeef161cbbcaa776b"
 
 ["0.12.0"]
 git-tree-sha1 = "54a3ff378682d92afb5406776c2f62da8d4e228e"
+
+["0.13.0"]
+git-tree-sha1 = "49fadb15648a3df114886ea252b9670ea14d8369"
