New version: QMatrices v0.14.0
UUID: e8637a5f-fa46-429a-85d3-62b6b7f83b1f
Repo:
Tree: 01a0b08c80384e7b52b39de84d8b27bd5bc06ca5

--- a/Q/QMatrices/Versions.toml
+++ b/Q/QMatrices/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "54a3ff378682d92afb5406776c2f62da8d4e228e"
 
 ["0.13.0"]
 git-tree-sha1 = "49fadb15648a3df114886ea252b9670ea14d8369"
+
+["0.14.0"]
+git-tree-sha1 = "01a0b08c80384e7b52b39de84d8b27bd5bc06ca5"
